# SureClean_UGV

./: .gitignore  IMU_integration.md  Jetson_SSH.md  Networking_Instructions.md  README.md  TP-Link Permanent IP Addresses.md
Husky_Setup/: 99-usb-serial.rules  README.md  SETUP.md  husky_startup.sh
Husky_Setup/scripts/: imu_sureclean.bash  sureclean_launch.bash
src/gps_nav/: CMakeLists.txt  README.md  package.xml
src/gps_nav/launch/: gps_nav.launch
src/gps_nav/src/: gps_nav_node.cpp  mission_start.cpp
src/gps_nav/src/gps_waypoint_nav/: CMakeLists.txt  package.xml
src/gps_nav/src/gps_waypoint_nav/launch/: localization_run.launch  navsat_transform.launch
src/gps_nav/src/gps_waypoint_nav/params/: ekf_template.yaml  gps_waypoint.yaml
src/gps_nav/src/gps_waypoint_nav/src/: gps_waypoint_nav.cpp
src/imu_transformer/launch/: imu_transformer.launch
src/move_pid/: CMakeLists.txt  package.xml
src/move_pid/src/: human_to_odom.cpp  move_pid.cpp
src/movement/: CMakeLists.txt
src/movement/launch/: state_estimation.launch
src/movement/src/: human_to_odom.cpp  movement_controller.cpp  pid_controller.cpp  point_and_shoot.cpp
src/reach_ros_node/: README.md
src/reach_ros_node/scripts/: nmea_tcp_driver
src/robot_localization/launch/: dual_ekf_navsat_sureclean.launch  ekf_template.launch  sureclean_navsat_dual_ekf.launch  um7_mag.launch  (+1 more)
src/sureclean_ugv_controller/: CMakeLists.txt  package.xml
src/sureclean_ugv_goal_ui/: CMakeLists.txt  package.xml
src/sureclean_ugv_planner/: CMakeLists.txt  package.xml
src/sureclean_utils/: CMakeLists.txt  package.xml
(+35 files in other folders)
